Fixed spacing gap at top of main div

--- a/django_app/frontend/src/redbox_design_system/rbds/iai-overrides.scss
+++ b/django_app/frontend/src/redbox_design_system/rbds/iai-overrides.scss
@@ -119,3 +119,7 @@ main,
 body {
   min-height: 0 !important;
 }
+
+.govuk-main-wrapper {
+  padding: 0;
+}
